--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
 Django==1.11.4
+Pillow==4.2.1
+certifi==2017.7.27.1
+chardet==3.0.4
+django-simple-captcha==0.5.5
+get==0.0.0
+idna==2.5
+olefile==0.44
+post==0.0.0
+public==0.0.38
 pytz==2017.2
+query-string==0.0.12
+requests==2.18.3
+setupfiles==0.0.50
+six==1.10.0
+urllib3==1.22
