--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,13 @@
-Django==1.11.15
-Pillow==4.2.1
-certifi==2017.7.27.1
+certifi==2019.3.9
 chardet==3.0.4
-django-simple-captcha==0.5.5
-get==0.0.0
-idna==2.5
-olefile==0.44
-post==0.0.0
-psycopg2==2.7.3
-public==0.0.38
-pytz==2017.2
-query-string==0.0.12
-requests==2.18.3
-setupfiles==0.0.50
-six==1.10.0
-urllib3==1.22
+Django==2.2.1
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.11
+idna==2.8
+Pillow==6.0.0
+pkg-resources==0.0.0
+pytz==2019.1
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+urllib3==1.25.3
